@@ -3,15 +3,14 @@ package com.gw2auth.oauth2.server.util;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class UtilsTest {
 
     @Test
     public void splitOneMatch() {
-        final List<String> result = Utils.split("hello", ",").collect(Collectors.toList());
+        final List<String> result = Utils.split("hello", ",").toList();
 
         assertEquals(1, result.size());
         assertEquals("hello", result.get(0));
@@ -19,7 +18,7 @@ class UtilsTest {
 
     @Test
     public void splitSimple() {
-        final List<String> result = Utils.split("hello,world", ",").collect(Collectors.toList());
+        final List<String> result = Utils.split("hello,world", ",").toList();
 
         assertEquals(2, result.size());
         assertEquals("hello", result.get(0));
@@ -28,7 +27,7 @@ class UtilsTest {
 
     @Test
     public void splitEmptyMatch() {
-        final List<String> result = Utils.split("hello,,world", ",").collect(Collectors.toList());
+        final List<String> result = Utils.split("hello,,world", ",").toList();
 
         assertEquals(3, result.size());
         assertEquals("hello", result.get(0));
@@ -38,7 +37,7 @@ class UtilsTest {
 
     @Test
     public void splitEmptyMatchStartEnd() {
-        final List<String> result = Utils.split(",hello,world,", ",").collect(Collectors.toList());
+        final List<String> result = Utils.split(",hello,world,", ",").toList();
 
         assertEquals(4, result.size());
         assertEquals("", result.get(0));
@@ -49,7 +48,7 @@ class UtilsTest {
 
     @Test
     public void parseQueryNoValue() {
-        final List<QueryParam> result = Utils.parseQuery("key").collect(Collectors.toList());
+        final List<QueryParam> result = Utils.parseQuery("key").toList();
 
         assertEquals(1, result.size());
         assertEquals(new QueryParam.QueryParamWithoutValue("key"), result.get(0));
@@ -57,7 +56,7 @@ class UtilsTest {
 
     @Test
     public void parseQueryOneParam() {
-        final List<QueryParam> result = Utils.parseQuery("key=value").collect(Collectors.toList());
+        final List<QueryParam> result = Utils.parseQuery("key=value").toList();
 
         assertEquals(1, result.size());
         assertEquals(new QueryParam.QueryParamWithValue("key", "value"), result.get(0));
@@ -65,7 +64,7 @@ class UtilsTest {
 
     @Test
     public void parseQueryOneParamSpecialChars() {
-        final List<QueryParam> result = Utils.parseQuery("hello%20world=world%20hello").collect(Collectors.toList());
+        final List<QueryParam> result = Utils.parseQuery("hello%20world=world%20hello").toList();
 
         assertEquals(1, result.size());
         assertEquals(new QueryParam.QueryParamWithValue("hello world", "world hello"), result.get(0));
@@ -73,7 +72,7 @@ class UtilsTest {
 
     @Test
     public void parseQuerySameNameTwice() {
-        final List<QueryParam> result = Utils.parseQuery("hello=world1&hello=world2").collect(Collectors.toList());
+        final List<QueryParam> result = Utils.parseQuery("hello=world1&hello=world2").toList();
 
         assertEquals(2, result.size());
         assertEquals(new QueryParam.QueryParamWithValue("hello", "world1"), result.get(0));
@@ -82,7 +81,7 @@ class UtilsTest {
 
     @Test
     public void parseComplexQuery() {
-        final List<QueryParam> result = Utils.parseQuery("sdd.%2C%2Fs%28%265dsad%3D%7D%3D%22sd%5C%5Cds=_-%26%3D%24%3Faaalele%7C%7Ba%7D").collect(Collectors.toList());
+        final List<QueryParam> result = Utils.parseQuery("sdd.%2C%2Fs%28%265dsad%3D%7D%3D%22sd%5C%5Cds=_-%26%3D%24%3Faaalele%7C%7Ba%7D").toList();
 
         assertEquals(1, result.size());
         assertEquals(new QueryParam.QueryParamWithValue("sdd.,/s(&5dsad=}=\"sd\\\\ds", "_-&=$?aaalele|{a}"), result.get(0));
